fix display issues on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -145,6 +145,7 @@ a {
 
 .nav-list {
   width: 100px;
+  max-width: 25vw;
   height: 100%;
   text-align: center;
   line-height: 50px;
@@ -154,6 +155,7 @@ a {
 
 .nav-bar {
   width: 100px;
+  max-width: 25vw;
   position: absolute;
   top: 0px;
   left: -100px;
@@ -239,21 +241,6 @@ a {
   margin: 12px 0px 0px 10px;
   opacity: 0;
   transform: translateY(100px);
-}
-
-@media (max-width: 964px) {
-  .about-links {
-    width: 600px;
-    max-width: 80%;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-
-  .about-link {
-    width: auto !important;
-    padding: 0px;
-  }
 }
 
 .about-link {
@@ -586,6 +573,8 @@ a {
   border-radius: 999px !important;
   padding-left: 8px !important;
   padding-right: 8px !important;
+  margin-top: 2px !important;
+  margin-bottom: 2px !important;
 }
 
 .researches {
@@ -602,6 +591,7 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
   opacity: 0;
   transform: translateX(100px);
   margin-top: 10px;
@@ -611,8 +601,8 @@ a {
 .research-image-wrap {
   width: 20vw;
   height: 20vw;
-  min-width: 50px;
-  min-height: 50px;
+  min-width: 120px;
+  min-height: 120px;
   max-width: 300px;
   max-height: 300px;
 }
@@ -621,7 +611,7 @@ a {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 10vw;
+  border-radius: 9999px;
   filter: grayscale(.15);
   transition: filter .5s;
 }
@@ -634,6 +624,8 @@ a {
 .research-text {
   width: 50vw;
   text-align: left;
+  min-width: 300px;
+  padding: 5px;
 }
 
 .research-title {
@@ -759,4 +751,32 @@ a:hover > .contact-email {
   background-blend-mode: lighten;
   background-color: #222;
   background-position: center bottom;
+}
+
+/* for small screens */
+@media (max-width: 964px) {
+  .about-links {
+    width: 600px;
+    max-width: 80%;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .about-link {
+    width: auto !important;
+    padding: 5px;
+  }
+}
+
+@media (max-width: 600px) {
+  .about-wrap {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 702px) {
+  .keywords-title {
+    flex-basis: 100%;
+  }
 }
